# sized-dst

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: green-threads.rs
src/: assert.rs  lib.rs  trait_impls.rs
tests/: test.rs
tests/ui/: align-fail.rs  align-fail.stderr  borrowchk-fail.rs  borrowchk-fail.stderr  custom-dst-fail.rs  custom-dst-fail.stderr  size-fail.rs  size-fail.stderr
