[package]
name = "sized-dst"
version = "0.1.0"
edition = "2021"
description = "Owned container for dynamically-sized types backed by inline memory"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
keywords = ["no_std", "trait-object", "traits"]
categories = ["no-std::no-alloc", "data-structures", "rust-patterns"]
readme = "README.md"
repository = "https://github.com/YuhanLiin/sized-dst"
license = "MIT OR Apache-2.0"

[features]
std = [] # impls of std traits

[dependencies]
aligned = "0.4.2"

[dev-dependencies]
static_assertions = "1.1"
trybuild = "1"
futures-executor = "0.3.30"
